docs/api/qiskit/0.25/qiskit.opflow.evolutions.MatrixEvolution.mdx
---
title: MatrixEvolution (v0.25)
description: API reference for qiskit.opflow.evolutions.MatrixEvolution in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.MatrixEvolution
---

<span id="qiskit-opflow-evolutions-matrixevolution" />

# qiskit.opflow\.evolutions.MatrixEvolution

<Class id="qiskit.opflow.evolutions.MatrixEvolution" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/matrix_evolution.py" signature="MatrixEvolution" modifiers="class">
  Performs Evolution by classical matrix exponentiation, constructing a circuit with `UnitaryGates` or `HamiltonianGates` containing the exponentiation of the Operator.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.evolutions.MatrixEvolution.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                             |                                                                                                                                                                                                            |
  | --------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.evolutions.MatrixEvolution.__init__ "qiskit.opflow.evolutions.MatrixEvolution.__init__")()      | Initialize self.                                                                                                                                                                                           |
  | [`convert`](#qiskit.opflow.evolutions.MatrixEvolution.convert "qiskit.opflow.evolutions.MatrixEvolution.convert")(operator) | Traverse the operator, replacing `EvolvedOps` with `CircuitOps` containing `UnitaryGates` or `HamiltonianGates` (if self.coeff is a `ParameterExpression`) equalling the exponentiation of -i \* operator. |

  ### convert

  <Function id="qiskit.opflow.evolutions.MatrixEvolution.convert" signature="convert(operator)">
    Traverse the operator, replacing `EvolvedOps` with `CircuitOps` containing `UnitaryGates` or `HamiltonianGates` (if self.coeff is a `ParameterExpression`) equalling the exponentiation of -i \* operator. This is done by converting the `EvolvedOp.primitive` to a `MatrixOp` and simply calling `.exp_i()` on that.

    **Parameters**

    **operator** (`OperatorBase`) – The Operator to convert.

    **Return type**

    `OperatorBase`

    **Returns**

    The converted operator.
  </Function>
</Class>

